# SQL-query-builder

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/skills/sql-query-builder/: SKILL.md
knowledge/: CHANGELOG.md  INDEX.md  conventions.md
knowledge/rules/: classifiers.md  constants.md  lookups.md  mappings.md  projections.md
knowledge/schema/: ctes.md  joins.md  tables.md
prompts/: generate-query.md  sync-knowledge.md
queries/reference/: inventory-adjustments-argents.sql  transfer-order-argents-ylc.sql
requirements/: ia-argents-mapping.md  ia-argents-mapping.xlsx
scripts/: validate.py  xlsx_to_md.py
