[project]
name = "sql-query-builder"
version = "0.1.0"
description = "Markdown knowledge + LLM SQL query builder helpers"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sqlglot>=26.0.0",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
